# mcp-toolbox-for-google-workspace

./: .env.example  .gitignore  README.md  client.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_improvement.md  feature_request.md
.streamlit/: config.toml
examples/: gmail_client.py  google_calendar_client.py  google_drive_client.py  google_tasks.py
manifests/: gmail-manifest.json  google-calendar-manifest.json  google-drive-manifest.json  google-tasks-manifest.json
src/mcp_server/gmail/: auth.py  registry.py  schema.py  server.py  utils.py
src/mcp_server/google_calendar/: auth.py  registry.py  schema.py  server.py  utils.py
src/mcp_server/google_drive/: __init__.py  auth.py  registry.py  schema.py  server.py  utils.py
src/mcp_server/google_tasks/: __init__.py  auth.py  schema.py  server.py  utils.py
static/: firestore.py
static/css/: client_home.css
toolbox_agent/: __init__.py  agent.py  prompts.py  runner.py
toolbox_agent/sub_agents/calendar_agent/: __init__.py  agent.py  prompts.py
toolbox_agent/sub_agents/drive_agent/: __init__.py  agent.py  prompts.py
toolbox_agent/sub_agents/gmail_agent/: __init__.py  agent.py  prompts.py
toolbox_agent/sub_agents/tasks_agent/: __init__.py  agent.py  config.py  prompts.py
