[project]
name = "mcp-toolbox-for-google-workspace"
version = "0.1.0"
description = "MCP Toolbox for Google Workspace is an open source MCP server for Google Workspace services such as Drive, Calendar, and more."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ashwin Raj" }]
maintainers = [{ name = "Ashwin Raj", email = "thisisashwinraj@gmail.com" }]
keywords = ["mcp", "gws", "google-workspace", "google-drive", "google-calendar", "gmail"]
dependencies = [
    "aiohttp>=3.12.14",
    "black>=25.1.0",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.30.0",
    "mcp[cli]>=1.11.0",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "ruff>=0.12.3",
]

[tool.uv.workspace]
members = [
    "mcp-toolbox-for-google-workspace",
]
