[project]
name = "mcp-toolbox-for-google-workspace"
version = "0.1.1"
description = "MCP Toolbox for Google Workspace is an open source MCP server for Google Workspace services such as Drive, Calendar, and more."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ashwin Raj" }]
maintainers = [{ name = "Ashwin Raj", email = "thisisashwinraj@gmail.com" }]
keywords = ["mcp", "gws", "google-workspace", "google-drive", "google-calendar", "gmail"]
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.5",
    "black>=25.1.0",
    "firebase-admin>=6.9.0",
    "google-adk>=1.13.0",
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-genai>=1.30.0",
    "mcp[cli]>=1.11.0",
    "oauth2client>=4.1.3",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "pytz>=2025.2",
    "ruff>=0.12.3",
    "streamlit>=1.49.1",
    "xlrd>=2.0.2",
]

[tool.uv.workspace]
members = [
    "mcp-toolbox-for-google-workspace",
]
